--- a/zh-TW/browser/chrome/browser/devtools/webconsole.properties
+++ b/zh-TW/browser/chrome/browser/devtools/webconsole.properties
@@ -242,3 +242,19 @@ selfxss.okstring=allow pasting
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=顯示/隱藏訊息詳情。
 
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 個空白欄位
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(index)
+table.iterationIndex=(iteration index)
+table.key=鍵值
+table.value=值
+
