--- a/zh-TW/browser/chrome/browser/preferences/preferences.properties
+++ b/zh-TW/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=您的電腦中已儲存下列的 Cookie:
 cookiesFiltered=下列為符合您搜尋條件的 Cookie:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=移除離線網站資料
 offlineAppRemovePrompt=資料移除後，%S 就無法於離線狀態下使用了。您確定要移除該網站的離線資料？
 offlineAppRemoveConfirm=移除離線資料
