--- a/zh-TW/dom/chrome/accessibility/AccessFu.properties
+++ b/zh-TW/dom/chrome/accessibility/AccessFu.properties
@@ -94,11 +94,10 @@ listEnd        =       最後一個項目
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       #1 個項目
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %3$S 個 %1$S 當中的第 %2$S 個
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %2$S 個當中的第 %1$S 個
 
 # Landmark announcements
 banner         =       橫幅
@@ -108,17 +107,14 @@ main           =       主要
 navigation     =       導覽
 search         =       搜尋
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S (%S 欄 %S 列)
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = #1 欄
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = 包含 #1 欄
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = #1 列
+tblRowInfo = 與 #1 列
 
 # table or grid cell information
 columnInfo = 欄 %S
@@ -190,19 +186,86 @@ quicknav_Table       = 表格
 quicknav_Checkbox    = 複選盒
 
 # Shortened role names for braille
-linkAbbr           =       鏈結
-pushbuttonAbbr     =       按鈕
-passwordtextAbbr   =       密碼欄位
-imagemapAbbr       =       影像地圖
-figureAbbr         =       圖表
-textareaAbbr       =       多行文字框
+menubarAbbr        =       選單列
+scrollbarAbbr      =       捲動列
+gripAbbr           =       尺寸調整框
+alertAbbr          =       警告
+menupopupAbbr      =       彈出選單
+documentAbbr       =       文件
+paneAbbr           =       窗格
+dialogAbbr         =       對話框
+separatorAbbr      =       分隔線
+toolbarAbbr        =       工具列
+statusbarAbbr      =       狀態列
 tableAbbr          =       表格
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       欄標題
+rowheaderAbbr      =       行標題
+columnAbbr         =       欄
+rowAbbr            =       行
+cellAbbr           =       格子
+linkAbbr           =       鏈結
+listAbbr           =       清單
+listitemAbbr       =       清單項目
+outlineAbbr        =       大綱
+outlineitemAbbr    =       大綱項目
+pagetabAbbr        =       頁面導覽標籤
+propertypageAbbr   =       屬性頁面
+graphicAbbr        =       圖形
+pushbuttonAbbr     =       按鈕
+checkbuttonAbbr    =       多選按鈕
+radiobuttonAbbr    =       單選按鈕
+comboboxAbbr       =       下拉選單
+progressbarAbbr    =       進度列
+sliderAbbr         =       滾動條
+spinbuttonAbbr     =       旋轉按鈕
+diagramAbbr        =       圖表
+animationAbbr      =       動畫
+equationAbbr       =       方程式
+buttonmenuAbbr     =       按鈕選單
+whitespaceAbbr     =       空白
+pagetablistAbbr    =       導覽標籤清單
+canvasAbbr         =       畫布
+checkmenuitemAbbr  =       複選清單項目
+labelAbbr          =       標籤
+passwordtextAbbr   =       密碼欄位
+radiomenuitemAbbr  =       單選清單項目
+textcontainerAbbr  =       文字容器
+togglebuttonAbbr   =       開關按鈕
+treetableAbbr      =       樹狀表格
+headerAbbr         =       檔頭
+footerAbbr         =       檔尾
+paragraphAbbr      =       段落
+entryAbbr          =       項目
+captionAbbr        =       表格標題
+headingAbbr        =       標題
+sectionAbbr        =       區段
+formAbbr           =       表單
+comboboxlistAbbr   =       複選下拉清單
+comboboxoptionAbbr =       複選下拉清單項目
+imagemapAbbr       =       影像地圖
+listboxoptionAbbr  =       下拉選單項目
+listboxAbbr        =       下拉選單
+flatequationAbbr   =       方程式
+gridcellAbbr       =       網格欄位
+noteAbbr           =       注意
+figureAbbr         =       圖表
+definitionlistAbbr =       定義清單
+termAbbr           =       詞彙
+definitionAbbr     =       定義
+textareaAbbr       =       多行文字框
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r
+tblRowInfoAbbr = #1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = 已選
+stateUncheckedAbbr = 未選
+statePressedAbbr = 已選
+stateUnpressedAbbr = 未選
 
