--- a/zh-TW/mobile/android/chrome/webapp.properties
+++ b/zh-TW/mobile/android/chrome/webapp.properties
@@ -56,3 +56,5 @@ retrievalFailedTitle=#1 更新失敗
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=%1$S 的更新下載失敗
 
+webappsDisabledInGuest=訪客瀏覽階段中無法安裝應用程式
+
