--- a/zh-TW/toolkit/chrome/global/aboutSupport.properties
+++ b/zh-TW/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = 找不到 ClearType 參數
 adapterDescription = 顯示卡名稱
 adapterVendorID = 銷售商 ID (Vendor ID)
 adapterDeviceID = 裝置 ID (Device ID)
+adapterSubsysID = Subsys ID
 adapterDrivers = 顯示卡驅動程式
 adapterRAM = 顯示卡記憶體大小
 driverVersion = 驅動程式版本
@@ -71,6 +72,7 @@ driverDate = 驅動程式日期
 adapterDescription2 = 顯示卡名稱（第二 GPU）
 adapterVendorID2 = 銷售商 ID（第二 GPU）
 adapterDeviceID2 = 裝置 ID（第二 GPU）
+adapterSubsysID2 = Subsys ID (第二 GPU)
 adapterDrivers2 = 顯示卡驅動程式（第二 GPU）
 adapterRAM2 = 顯示卡記憶體大小（第二 GPU）
 driverVersion2 = 驅動程式版本（第二 GPU）
