--- a/zh-TW/webapprt/webapprt/webapp.properties
+++ b/zh-TW/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=安裝 %S
 webapps.install.description=您想要安裝 %S 嗎？
 webapps.install.install=安裝應用程式
 webapps.install.dontinstall=不要安裝
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=移除 %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=您確定要移除 %S 嗎？
+webapps.uninstall.uninstall=移除應用程式
+webapps.uninstall.dontuninstall=不要移除
 
 paymentDialog.title=付款
 paymentDialog.message=您想要透過哪個提供者付款？
