--- a/zh-TW/browser/chrome/browser/devtools/scratchpad.properties
+++ b/zh-TW/browser/chrome/browser/devtools/scratchpad.properties
@@ -104,3 +104,13 @@ scratchpad.panelLabel=速記本面板
 # window.
 scratchpad.tooltip=程式碼速記本
 
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=詐騙警告: 請勿貼上您不了解的內容或程式碼。這可能會造成攻擊者偷走您的身分或控制您的電腦。請在下方輸入「%S」以允許貼上文字。
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=allow pasting
+
