--- a/zh-TW/browser/chrome/browser/quitDialog.properties
+++ b/zh-TW/browser/chrome/browser/quitDialog.properties
@@ -10,4 +10,5 @@ saveTitle=儲存後離開
 neverAsk2=下次不要再詢問
 message=您要讓 %S 儲存您開啟的分頁及視窗並在下次啟動時顯示嗎？
 messageNoWindows=您要讓 %S 儲存您開啟的分頁並在下次啟動時顯示嗎？
+messagePrivate=您正在隱私瀏覽模式當中。離開 %S 將會捨棄您所有的分頁與視窗。
 
