--- a/zh-TW/mobile/android/chrome/browser.properties
+++ b/zh-TW/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=安裝
 
 # Alerts
 alertAddonsDownloading=正在下載附加元件
-alertAddonsInstalledNoRestart=安裝完成
 alertAddonsFail=安裝失敗
+alertAddonsInstalledNoRestart.message=安裝完成
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=附加元件
 
 alertDownloadsStart2=下載開始
 alertDownloadsDone2=下載完成
@@ -19,6 +23,9 @@ alertDownloadsToast=下載已開始…
 alertDownloadsPause=暫停
 alertDownloadsResume=繼續
 alertDownloadsCancel=取消
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=訪客瀏覽階段中無法下載檔案
 
 alertFullScreenToast=請按下 Back 離開全螢幕模式
 
@@ -116,6 +123,35 @@ contacts.ask=允許 %S 存取您的聯絡人？
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=針對這個網站不要再問我
 
+# Device Storage API
+deviceStorageMusic.allow=允許
+deviceStorageMusic.dontAllow=不允許
+deviceStorageMusic.ask=允許 %S 存取您裝置上的音樂？
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=針對這個網站不要再問我
+
+deviceStoragePictures.allow=允許
+deviceStoragePictures.dontAllow=不允許
+deviceStoragePictures.ask=允許 %S 存取您裝置上的相片？
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=針對這個網站不要再問我
+
+deviceStorageSdcard.allow=允許
+deviceStorageSdcard.dontAllow=不允許
+deviceStorageSdcard.ask=允許 %S 存取您裝置的外部儲存空間？
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=針對這個網站不要再問我
+
+deviceStorageVideos.allow=允許
+deviceStorageVideos.dontAllow=不允許
+deviceStorageVideos.ask=允許 %S 存取您裝置上的影片？
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=針對這個網站不要再問我
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=true
 selectionHelper.textCopied=已複製文字至剪貼簿
 
 # Casting
-casting.prompt=播放至裝置
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=傳送至裝置
+casting.mirrorTab=投放分頁
+casting.mirrorTabStop=停止投放
 
 # Context menu
 contextmenu.openInNewTab=用新分頁開啟鏈結
@@ -209,7 +249,9 @@ contextmenu.unmute=取消靜音
 contextmenu.saveVideo=儲存視訊檔案
 contextmenu.saveAudio=儲存音訊檔案
 contextmenu.addToContacts=新增至通訊錄
-contextmenu.castToScreen=投放至裝置
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=傳送至裝置
 
 contextmenu.copy=複製
 contextmenu.cut=剪下
@@ -341,4 +383,10 @@ browser.menu.context.mailto = 郵件
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=選擇資訊來源
 feedHandler.subscribeWith=使用下列服務訂閱
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S 已被棄用，請改用 %S
 
