--- a/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
+++ b/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,4 +299,7 @@ SEC_ERROR_LOCKED_PASSWORD=密碼已鎖定。
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=未知的 PKCS #11 錯誤。
 SEC_ERROR_BAD_CRL_DP_URL=CRL 發佈點當中有無效或未支援的 URL。
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=此憑證使用了已被停用的演算法所簽署，因為該演算法不安全。
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=此伺服器使用 key pinning (HPKP) 機制，但無法建構符合 pinset 的信任的金鑰鍊。無法忽略違規的 key pinning。
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=伺服器使用了包含「基本限制」擴充欄位的憑證，表示其為憑證機構。對於正確發行的憑證來說不應該這麼做。
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=伺服器提供的憑證金鑰太小，無法建立安全連線。
 
