--- a/pl/browser/chrome/browser/newTab.properties
+++ b/pl/browser/chrome/browser/newTab.properties
@@ -5,7 +5,7 @@
 newtab.pin=Przypnij tę stronę w jej obecnym miejscu
 newtab.unpin=Odepnij tę stronę
 newtab.block=Usuń tę stronę
-newtab.sponsored.button=Sponsorowana
+newtab.sponsored.button=SPONSOROWANA
 newtab.sponsored.explain=Ta miniaturka jest wyświetlana w imieniu partnera Mozilli. Miniaturkę można usunąć, używając przycisku %1$S. %2$S
 newtab.enhanced.explain=Partner Mozilli zmienił wygląd tej miniaturki. Modyfikowanie miniaturek można wyłączyć, korzystając z przycisku %1$S. %2$S
 newtab.intro.paragraph1=W nowych kartach, wyświetlane są miniaturki często odwiedzanych stron oraz miniaturki, które naszym zdaniem mogą być dla Ciebie interesujące. Niektóre z nich mogą być sponsorowane przez partnerów Mozilli i zawsze będą stosownie oznaczane. %1$S
