Copying changes from central for v34

--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -56,6 +56,10 @@ popupBlock = Bloquear ventanas emergentes para %S
 popupWarningDontShowFromMessage = No mostrar este mensaje cuando se bloqueen ventanas emergentes
 popupWarningDontShowFromLocationbar = No mostrar la barra de información cuando se bloqueen ventanas emergentes
 popupShowPopupPrefix = Mostrar '%S'
+
+badContentBlocked.blocked.message=%S está bloqueando contenido en esta página.
+badContentBlocked.notblocked.message=%S no está bloqueando ningún contenido en esta página.
+
 installPlugin.message = ¿Quiére instalar el complemento necesario para mostrar los medios en esta página?
 installPlugin.button.label=Instalar %S
 installPlugin.button.accesskey=I
@@ -229,6 +233,11 @@ webapps.install.accesskey = I
 webapps.requestInstall = ¿Desea instalar "%1$S" desde este sitio (%2$S)?
 webapps.install.success = Aplicación instalada
 webapps.install.inprogress = Instalación en progreso
+webapps.uninstall = Desinstalar
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall = No desinstalar
+webapps.doNotUninstall.accesskey = D
+webapps.requestUninstall = ¿Quieres desinstalar "%1$S"?
 fullscreen.entered = %S está ahora a pantalla completa.
 fullscreen.rememberDecision = Recordar esta decisión para %S
 fullscreenButton.tooltip=Mostrar la ventana a pantalla completa (%S)
@@ -263,13 +272,23 @@ getUserMedia.shareMicrophone.message = ¿Desea compartir su micrófono con %S?
 getUserMedia.shareScreen.message = ¿Desea compartir su pantalla con %S?
 getUserMedia.shareCameraAndMicrophone.message = ¿Desea compartir su cámara y micrófono con %S?
 getUserMedia.shareScreenAndMicrophone.message = ¿Desea compartir su micrófono y pantalla con %S?
+getUserMedia.selectWindow.label=Ventana a compartir:
+getUserMedia.selectWindow.accesskey=W
+getUserMedia.selectScreen.label=Ventana a compartir:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Aplicación a compartir:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sin video
-getUserMedia.noWindowOrScreen.label = Sin pantalla o ventana
+getUserMedia.noApplication.label = Sin aplicación
+getUserMedia.noScreen.label = Sin pantalla
+getUserMedia.noWindow.label = Sin ventana
 getUserMedia.noAudio.label = Sin audio
 getUserMedia.shareEntireScreen.label = Pantalla entera
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 ventana);#1 (#2 ventanas)
 getUserMedia.shareSelectedDevices.label = Compartir dispositivo seleccionado;Compartir dispositivos seleccionados
 getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = Compartir pantalla
+getUserMedia.shareApplication.label = Compartir aplicación seleccionada
 getUserMedia.shareWindow.label = Compartir ventana seleccionada
 getUserMedia.shareSelectedItems.label = Compartir elementos seleccionados
 getUserMedia.always.label = Siempre compartir
@@ -281,6 +300,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Está actualmente compartiendo su cámara con esta página.
 getUserMedia.sharingMicrophone.message2 = Está actualmente compartiendo su micrófono con esta página.
 getUserMedia.sharingCameraAndMicrophone.message2 = Está actualmente compartiendo su cámara y micrófono con esta página.
+getUserMedia.sharingApplication.message = Está actualmente compartiendo una aplicación con esta página.
 getUserMedia.sharingScreen.message = Está actualmente compartiendo su pantalla con esta página.
 getUserMedia.sharingWindow.message = Está actualmente compartiendo una ventana con esta página.
 getUserMedia.continueSharing.label = Seguir compartiendo
@@ -288,12 +308,21 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Dejar de compartir
 getUserMedia.stopSharing.accesskey = S
 
-mixedContentBlocked.message = %S ha bloqueado contenido que es inseguro.
-mixedContentBlocked.keepBlockingButton.label = Mantener bloqueo
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = Desactivar la protección en esta página
-mixedContentBlocked.unblock.accesskey = D
-
+getUserMedia.sharingMenu.label = Pestañas compartiendo dispositivos
+getUserMedia.sharingMenu.accesskey = d
+getUserMedia.sharingMenuCamera = %S (cámara)
+getUserMedia.sharingMenuMicrophone = %S (micrófono)
+getUserMedia.sharingMenuApplication = %S (aplicación)
+getUserMedia.sharingMenuScreen = %S (pantalla)
+getUserMedia.sharingMenuWindow = %S (ventana)
+getUserMedia.sharingMenuCameraMicrophone = %S (cámara y micrófono)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (cámara, micrófono y aplicación)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (cámara, micrófono y pantalla)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (cámara, micrófono y ventana)
+getUserMedia.sharingMenuMicrophoneApplication = %S (micrófono y aplicación)
+getUserMedia.sharingMenuMicrophoneScreen = %S (micrófono y pantalla)
+getUserMedia.sharingMenuMicrophoneWindow = %S (micrófono y ventana)
+getUserMedia.sharingMenuUnknownHost = Origen desconocido
 
 slowStartup.message = %S parece lento… para… iniciar.
 slowStartup.helpButton.label = Aprenda como hacerlo más rápido
