--- a/es-CL/browser/chrome/browser/devtools/profiler.properties
+++ b/es-CL/browser/chrome/browser/devtools/profiler.properties
@@ -2,26 +2,32 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-profiler.label=Perfilador
-profiler.panelLabel=Panel del perfilador
-profiler2.commandkey=VK_F5
-profiler.accesskey=Y
+profiler.label2=Rendimiento
+profiler.panelLabel2=Panel de rendimiento
+profiler.commandkey2=VK_F5
+profiler.accesskey=P
 profiler.tooltip2=Perfilador de JavaScript
-profiler.profileName=Perfil %S
-profiler.completeProfile=Perfil completo
-profiler.sampleRange=Rango de muestra
-profiler.runningTime=Tiempo de ejecución
-profiler.self=Perfilador
-profiler.symbolName = Nombre del símbolo
-profiler.start = Empezar
-profiler.stop = Detener
-profiler.loading = Cargando perfil…
-profiler.stateIdle=En espera
-profiler.stateRunning=Ejecutándose
-profiler.stateCompleted=Completado
-profiler.sidebarNotice=Actualmente no hay perfiles.
-profiler.startProfilerString=Empezar a perfilar
-profiler.stopProfilerString=Dejar de perfilar
-profiler.save=Guardar
-profiler.saveFileAs=Guardar perfil como
-profiler.openFile=Importar perfil
+
+noRecordingsText=Todavía no hay perfiles.
+recordingsList.itemLabel=Grabando #%S
+recordingsList.recordingLabel=En progreso…
+recordingsList.durationLabel=%S ms
+recordingsList.saveLabel=Guardar
+profile.tab=%1$S ms → %2$S ms
+graphs.fps=fps
+
+category.other=Gecko
+category.css=Estilos
+category.js=JIT
+category.gc=GC
+category.network=Red
+category.graphics=Gráficos
+category.storage=Almacenamiento
+category.events=Entrada y eventos
+
+table.root=(root)
+table.url.tooltiptext=Ver fuente en el depurador
+table.zoom.tooltiptext=Inspeccionar cuadro en nueva pestaña
+recordingsList.saveDialogTitle=Guardar perfil…
+recordingsList.saveDialogJSONFilter=Archivos JSON
+recordingsList.saveDialogAllFilter=Todos los archivos
