--- a/es-CL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-CL/browser/chrome/browser/devtools/scratchpad.properties
@@ -24,3 +24,5 @@ connectionTimeout = Tiempo de espera superado. Compruebe la Consola de errores e
 scratchpad.label=Borrador
 scratchpad.panelLabel=Panel del borrador
 scratchpad.tooltip=Borrador
+selfxss.msg=Advertencia de estafa: Tenga cuidado al pegar cosas que no comprenda. Esto puede permitir a atacantes robar su identidad o tomar el control de su computador. Por favor, escriba '%S' en el borrador a continuación para permitir pegar.
+selfxss.okstring=permitir pegar
