--- a/es-CL/browser/chrome/browser/devtools/toolbox.properties
+++ b/es-CL/browser/chrome/browser/devtools/toolbox.properties
@@ -8,8 +8,11 @@ toolbox.titleTemplate=%1$S - %2$S
 toolbox.defaultTitle=Herramientas de desarrollador
 toolbox.label=Herramientas de desarrollador
 optionsButton.tooltip=Opciones de la caja de herramientas
+options.label=Opciones
 options.panelLabel=Panel de opciones de la caja de herramientas
 options.toolNotSupportedMarker=%1$S *
 scratchpad.keycode=VK_F4
 browserConsoleCmd.commandkey=j
 pickButton.tooltip=Tomar un elemento de la página
+options.darkTheme.label=Tema oscuro
+options.lightTheme.label=Tema claro
