--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -17,25 +17,48 @@ unable_retrieve_url=Lo sentimos, no pudimos obtener la url de llamado.
 incoming_call_title=Llamada entrante…
 incoming_call=Llamada entrante
 incoming_call_answer_button=Responder
+incoming_call_answer_audio_only_tooltip=Responder con voz
 incoming_call_decline_button=Rechazar
-incoming_call_ignore_button=Ignorar
+incoming_call_decline_and_block_button=Rechazar y bloquear
 incoming_call_block_button=Bloquear
 hangup_button_title=Colgar
+hangup_button_caption=Terminar llamada
 mute_local_audio_button_title=Silenciar su audio
 unmute_local_audio_button_title=Desilenciar su audio
 mute_local_video_button_title=Ocultar su video
 unmute_local_video_button_title=Desocultar su video
 
-peer_ended_conversation=Su par terminó la conversación.
+peer_ended_conversation2=La persona a la que llamaba terminó la conversación.
 call_has_ended= Su llamada ha terminado.
-close_window=Cerrar esta ventana
 
 cannot_start_call_session_not_ready=No se puede iniciar la llamada, la sesión no está lista.
 network_disconnected=La conexión de red terminó abruptamente.
 
 connection_error_see_console_notification=La llamada falló; vea la consola para detalles.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Al usar este producto usted acepta los <a \
-  target="_blank" href="{{terms_of_use_url}}">Términos de uso</a> y la <a \
-  href="{{privacy_notice_url}}">Política de privacidad</a>.
+legal_text_and_links2=Al usar este producto usted acepta los {{terms_of_use}} \
+  y la {{privacy_notice}}.
+legal_text_tos = Términos de uso
+legal_text_privacy = Política de privacidad
+
+feedback_call_experience_heading=¿Cómo fue la experiencia de su llamada?
+feedback_what_makes_you_sad=¿Qué le entristece?
+feedback_thank_you_heading=¿Gracias por sus comentarios!
+feedback_category_audio_quality=Calidad del audio
+feedback_category_video_quality=Calidad del video
+feedback_category_was_disconnected=Estaba desconectado
+feedback_category_confusing=Confusa
+feedback_category_other=Otro:
+feedback_custom_category_text_placeholder=¿Qué falló?
+feedback_submit_button=Enviar
+feedback_back_button=Atrás
+feedback_window_will_close_in2=Esta ventana se cerrará en {{countdown}} segundo;Esta ventana se cerrará en {{countdown}} segundos
+
+
+share_email_subject2=Invitación a charlar
+share_email_body2=Por favor, aprieta este enlace para llamarme:\r\n\r\n{{callUrl}}
+
+share_button=Correo
+copy_url_button=Copiar
+copied_url_button=¡Copiado!
+
+panel_footer_signin_or_signup_link=Conectarse o registrarse
