--- a/es-CL/browser/chrome/browser/preferences/preferences.properties
+++ b/es-CL/browser/chrome/browser/preferences/preferences.properties
@@ -47,6 +47,8 @@ cannot = Bloquear
 noCookieSelected = <no hay ninguna cookie seleccionada>
 cookiesAll = <no hay ninguna cookie seleccionada>
 cookiesFiltered = Las siguientes cookies corresponden a su búsqueda:
+
+offlineAppsList.height=7em
 offlineAppRemoveTitle = Eliminar los datos sin conexión del sitio web
 offlineAppRemovePrompt = Después de eliminar estos datos, %S no estará disponible en modo sin conexión. ¿Está seguro que quiere borrar este sitio del modo sin conexión?
 offlineAppRemoveConfirm = Eliminar datos sin conexión
