--- a/es-CL/browser/chrome/browser/quitDialog.properties
+++ b/es-CL/browser/chrome/browser/quitDialog.properties
@@ -9,3 +9,4 @@ saveTitle = &Guardar y salir
 neverAsk2=&No preguntar la siguiente vez
 message = ¿Quiere que %S guarde sus pestañas y ventanas para la próxima vez que lo inicie?
 messageNoWindows = ¿Quiere que %S guarde sus pestañas para la próxima vez que lo inicie?
+messagePrivate=Está en el modo de navegación privada. Cerrar %S ahora descartará todas sus pestaás y ventanas abiertas.
