--- a/es-CL/browser/chrome/browser/shellservice.properties
+++ b/es-CL/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,17 @@
 
 optionsLabel=&Opciones de %S
 safeModeLabel=Modo &Seguro %S
-setDefaultBrowserTitle=Navegador por defecto
-setDefaultBrowserMessage=%S en este momento no es su navegador por defecto. ¿Quiere que lo sea?
-setDefaultBrowserDontAsk=Revisar siempre si %S está como navegador por defecto.
-alreadyDefaultBrowser=%S ya ha sido configurado como su navegador por defecto.
+
+setDefaultBrowserMessage2          = Sáquele el máximo provecho a %S dejándolo como su navegador por defecto
+setDefaultBrowserConfirm.label     = Usar %S como ni navegador por defecto
+setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserOptions.label     = Opciones
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Ahora no
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = No volver a preguntar
+setDefaultBrowserNever.accesskey   = D
+
 desktopBackgroundLeafNameWin=Fondo de escritorio.bmp
 DesktopBackgroundDownloading=Guardando imagen…
 DesktopBackgroundSet=Poner como fondo de escritorio
