--- a/es-CL/browser/chrome/browser/webrtcIndicator.properties
+++ b/es-CL/browser/chrome/browser/webrtcIndicator.properties
@@ -9,6 +9,7 @@ webrtcIndicator.windowtitle = %S - Indicador de compartir
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Su cámara y micrófono están siendo compartidos. Haga clic para controlar lo compartido.
 webrtcIndicator.sharingCamera.tooltip              = Su cámara está siendo compartida. Haga clic para controlar lo compartido.
 webrtcIndicator.sharingMicrophone.tooltip          = Su micrófono está siendo compartido. Haga clic para controlar lo compartido.
+webrtcIndicator.sharingApplication.tooltip = Una aplicación está siendo compartida. Haga clic para controlar lo compartido.
 webrtcIndicator.sharingScreen.tooltip = Su pantalla está siendo compartida. Haga clic para controlar lo compartido.
 webrtcIndicator.sharingWindow.tooltip = Una ventana está siendo compartida. Haga clic para controlar lo compartido.
 
@@ -17,6 +18,7 @@ webrtcIndicator.sharingWindow.tooltip = Una ventana está siendo compartida. Hag
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Compartiendo cámara con "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Compartiendo micrófono con "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Compartiendo una aplicación con "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Compartiendo pantalla con "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Compartiendo una ventana con "%S"
 webrtcIndicator.controlSharing.menuitem = Controlar lo compartido
@@ -24,6 +26,7 @@ webrtcIndicator.controlSharing.menuitem = Controlar lo compartido
 # Semicolon-separated list of plural forms.
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Compartiendo cámara con #1 pestaña;Compartiendo cámara con #1 pestañas
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Compartiendo micrófono con #1 pestaña;Compartiendo micrófono con #1 pestañas
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Compartiendo una aplicación con #1 pestaña;Compartiendo aplicaciones con #1 pestañas
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Compartiendo pantalla con #1 pestaña;Compartiendo pantalla con #1 pestañas
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Compartiendo una ventana con #1 pestaña;Compartiendo una ventana con #1 pestañas
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
