--- a/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -70,3 +70,6 @@ email-link-button.label = Enviar enlace
 
 quit-button.tooltiptext.linux2 = Salir de %1$S (%2$S)
 quit-button.tooltiptext.mac = Salir de %1$S (%2$S)
+
+loop-call-button.label = Invitar a alguien a charlar
+loop-call-button.tooltiptext = Invitar a alguien a charlar
