--- a/es-CL/browser/chrome/browser/devtools/projecteditor.properties
+++ b/es-CL/browser/chrome/browser/devtools/projecteditor.properties
@@ -11,63 +11,18 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
-# LOCALIZATION NOTE (projecteditor.deleteLabel):
-# This string is displayed as a context menu item for allowing the selected
-# file / folder to be deleted
+projecteditor.confirmUnsavedTitle=Cambios sin guardar
+projecteditor.confirmUnsavedLabel=Tiene cambios sin guardar que se perderán al salir. ¿Está seguro de que desea continuar?
 projecteditor.deleteLabel=Borrar
-
-# LOCALIZATION NOTE (projecteditor.deletePromptTitle):
-# This string is displayed as as the title of the confirm prompt that checks
-# to make sure if a file or folder should be removed.
 projecteditor.deletePromptTitle=Borrar
-
-# LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
-# This string is displayed as as the message of the confirm prompt that checks
-# to make sure if a folder should be removed.
 projecteditor.deleteFolderPromptMessage=¿Estás seguro de querer borrar esta carpeta?
-
-# LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
-# This string is displayed as as the message of the confirm prompt that checks
-# to make sure if a file should be removed.
 projecteditor.deleteFilePromptMessage=¿Estás seguro de querer borrar este archivo?
-
-# LOCALIZATION NOTE (projecteditor.newLabel):
-# This string is displayed as a context menu item for adding a new file to
-# the directory
 projecteditor.newLabel=Nuevo…
-
-# LOCALIZATION NOTE (projecteditor.saveLabel):
-# This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Guardar
-
-# LOCALIZATION NOTE (projecteditor.saveAsLabel):
-# This string is displayed as a menu item for saving the current file
-# with a new name.
 projecteditor.saveAsLabel=Guardar como…
-
-# LOCALIZATION NOTE (projecteditor.selectFileLabel):
-# This string is displayed as the title on the file picker when saving a file
 projecteditor.selectFileLabel=Seleccionar un archivo
-
-# LOCALIZATION NOTE (projecteditor.openFolderLabel):
-# This string is displayed as the title on the file picker when opening a folder
 projecteditor.openFolderLabel=Seleccionar una carpeta
-
-# LOCALIZATION NOTE (projecteditor.openFileLabel):
-# This string is displayed as the title on the file picker when opening a file
 projecteditor.openFileLabel=Abrir un archivo
-
-# LOCALIZATION NOTE  (projecteditor.find.commandkey): This is the key to use in
-# conjunction with accel (Command on Mac or Ctrl on other platforms) to search
-# text in the files
 projecteditor.find.commandkey=F
-
-# LOCALIZATION NOTE  (projecteditor.save.commandkey): This is the key to use in
-# conjunction with accel (Command on Mac or Ctrl on other platforms) to
-# save the file.  It is used with accel+shift to "save as"
 projecteditor.save.commandkey=S
-
-# LOCALIZATION NOTE  (projecteditor.new.commandkey): This is the key to use in
-# conjunction with accel (Command on Mac or Ctrl on other platforms) to
-# create a new file
 projecteditor.new.commandkey=N
