--- a/es-CL/browser/chrome/browser/devtools/webconsole.properties
+++ b/es-CL/browser/chrome/browser/devtools/webconsole.properties
@@ -73,3 +73,8 @@ cdFunctionInvalidArgument=No se puede hacer cd() en la ventana dada. Argumento i
 selfxss.msg=Advertencia de estafa: Tenga cuidado al pegar cosas que no entienda. Esto puede permitir a atacantes robar su identidad o tomar control de su computador. Por favor, escriba '%S' a continuación (no necesita apretar enter) para permitir pegar.
 selfxss.okstring=permitir pegar
 messageToggleDetails=Mostrar/ocultar detalles del mensaje.
+emptySlotLabel=#1 espacio vacío;#1 espacios vacíos
+table.index=(índice)
+table.iterationIndex=(índice de iteración)
+table.key=Clave
+table.value=Valores
