--- a/es-CL/browser/chrome/browser/newTab.properties
+++ b/es-CL/browser/chrome/browser/newTab.properties
@@ -5,6 +5,11 @@
 newtab.pin = Pegar este sitio en su posición actual
 newtab.unpin = Despegar este sitio
 newtab.block = Eliminar este sitio
-newtab.show = Mostrar la página de nueva pestaña
-newtab.hide = Ocultar la página de nueva pestaña
-newtab.sponsored=Mostrar información en sitios patrocinados
+newtab.sponsored.button=PATROCINADO
+newtab.sponsored.explain=Este sitio se te está siendo mostrado a nombre de un afiliado de Mozilla. Puede removerlo en cualquier momento apretando el botón %1$S. %2$S
+newtab.enhanced.explain=Un afiliado de Mozilla ha mejorado visualmente esta miniatura de sitio, reemplazando la captura. Puede desactivar las miniaturas mejoradas apretando el botón %1$S en sus preferencias. %2$S
+newtab.intro.paragraph1=Cuando abre una nueva pestaña, verá miniaturas de los sitios que visita frecuentemente, junto con sitios que creemos pueden ser de su interés. Algunos de estos sitios pueden ser patrocinados por afiliados de Mozilla. Siempre le indicaremos que sitios están patrocinados. %1$S
+newtab.intro.paragraph2=Con el fin de proveer este servicio, Mozilla recolecta y usa cierta información analítica relacionada con su uso de las miniaturas de acuerdo a nuestra %1$S.
+newtab.intro.paragraph3=Puede modificar la función de miniaturas apretando el botón %1$S según su preferencia.
+newtab.learn.link=Aprender más…
+newtab.privacy.link=Política de privacidad
