Copying changes from central for v34 part 2

--- a/es-CL/dom/chrome/security/csp.properties
+++ b/es-CL/dom/chrome/security/csp.properties
@@ -22,6 +22,7 @@ inlineScriptBlocked = Un intendo para ejecutar las secuencias de comandos integr
 inlineStyleBlocked = Un intento para aplicar hojas de estilo integradas ha sido bloqueado
 scriptFromStringBlocked = Un intento para llamar JavaScript desde una cadena (llamando una función como eval) ha sido bloqueado
 hostNameMightBeKeyword = Interpretando %1$S como un nombre de servidor, no como palabra clave. Si quiere usarlo como palabra clave, use '%2$S' (entre comillas simples).
+notSupportingDirective = No se soporta la directiva '%1$S'. La directiva y los valores serán ignorados.
 policyURINotAlone = la directiva policy-uri sólo puede aparecer aislada
 noParentRequest = El policy-uri no puede ser recuperado sin una solicitud padre y un CSP.
 policyURIParseError = no se puede analziar la URI de política: %1$S
