--- a/es-CL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-CL/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=La contraseña está bloqueada.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Error PKCS #11 desconocido.
 SEC_ERROR_BAD_CRL_DP_URL=URL no valida o no soportada en el nombre de punto de distribución de la CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificado fue firmado uando un algoritmo de firma que fue desactivado por no ser seguro.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=El servidor usa colocado de clave (HPKP) pero no se pudo construir una cadena de certificado confiable que coincida con la clave. Las violaciones de colocación de clave no pueden ser ignoradas.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor usa un certificado con una restricción de extensión básica identificándolo a él como una autoridad certificada. Para un certificado correctamente emitido, este no debiera ser el caso.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor presentó un certificado con un tamaño de clave que es muy pequeño para establecer una conexión segura.
