--- a/es-CL/toolkit/chrome/global/aboutSupport.properties
+++ b/es-CL/toolkit/chrome/global/aboutSupport.properties
@@ -21,6 +21,7 @@ clearTypeParametersNotFound = Parámetros de ClearType no enconrados
 adapterDescription = Descripción del adaptador
 adapterVendorID = ID de fabricante
 adapterDeviceID = ID de dispositivo
+adapterSubsysID = ID del subsistema
 adapterDrivers = Drivers del adaptador
 adapterRAM = RAM del adaptador
 driverVersion = Versión del driver
@@ -28,6 +29,7 @@ driverDate = Fecha del driver
 adapterDescription2 = Descripción del adaptador (GPU #2)\u0020
 adapterVendorID2 = ID de fabricante (GPU #2)\u0020
 adapterDeviceID2 = ID de dispositivo (GPU #2)
+adapterSubsysID2 = ID del subsistema (GPU #2)
 adapterDrivers2 = Drivers del adaptador (GPU #2)
 adapterRAM2 = RAM del adaptador (GPU #2)
 driverVersion2 = Versión del driver (GPU #2)
