--- a/es-CL/webapprt/webapprt/webapp.properties
+++ b/es-CL/webapprt/webapprt/webapp.properties
@@ -27,5 +27,10 @@ webapps.install.description=?¿Desea instalar %S?
 webapps.install.install=Instalar aplicación
 webapps.install.dontinstall=No instalar
 
+webapps.uninstall.title=Desinstalar %S
+webapps.uninstall.description=¿Quiere desinstalar %S?
+webapps.uninstall.uninstall=Desinstalar app
+webapps.uninstall.dontuninstall=No desinstalar
+
 paymentDialog.title=Pagos
 paymentDialog.message=¿Qué proveedor de pagos desea usar?
