--- a/es-CL/dom/chrome/accessibility/AccessFu.properties
+++ b/es-CL/dom/chrome/accessibility/AccessFu.properties
@@ -83,7 +83,7 @@ listStart = Primer elemento
 listEnd = Último elemento
 listItemsCount =       1 elemento;#1 elementos
 
-objItemOf      =       %1$S %2$S de %3$S
+objItemOfN      =       %1$S de %2$S
 
 banner         =       anuncio
 complementary  =       complementario
@@ -92,9 +92,8 @@ main           =       principal
 navigation     =       navegación
 search         =       búsqueda
 
-tableInfo = %S con %S y %S
-tableColumnInfo = 1 columna;#1 columnas
-tableRowInfo = 1 fila;#1 filas
+tblColumnInfo = con 1 columna;con #1 columnas
+tblRowInfo = y 1 fila;y #1 filas
 
 columnInfo = Columna %S
 rowInfo = Fila %S
@@ -155,14 +154,85 @@ quicknav_Table       = Tablas
 quicknav_Checkbox    = Cajas de marca
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
+menubarAbbr        =       menu bar
+scrollbarAbbr      =       scroll bar
+gripAbbr           =       grip
+alertAbbr          =       alert
+menupopupAbbr      =       menu popup
+documentAbbr       =       document
+paneAbbr           =       pane
+dialogAbbr         =       dialog
+separatorAbbr      =       separator
+toolbarAbbr        =       toolbar
+statusbarAbbr      =       status bar
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-tableColumnInfoAbbr = #1c;#1c
-tableRowInfoAbbr = #1r;#1r
+columnheaderAbbr   =       column header
+rowheaderAbbr      =       row header
+columnAbbr         =       column
+rowAbbr            =       row
+cellAbbr           =       cell
+linkAbbr           =       lnk
+listAbbr           =       list
+listitemAbbr       =       list item
+outlineAbbr        =       outline
+outlineitemAbbr    =       outline item
+pagetabAbbr        =       tab
+propertypageAbbr   =       property page
+graphicAbbr        =       graphic
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       check button
+radiobuttonAbbr    =       radio button
+comboboxAbbr       =       combo box
+progressbarAbbr    =       progress bar
+sliderAbbr         =       slider
+spinbuttonAbbr     =       spin button
+diagramAbbr        =       diagram
+animationAbbr      =       animation
+equationAbbr       =       equation
+buttonmenuAbbr     =       button menu
+whitespaceAbbr     =       white space
+pagetablistAbbr    =       tab list
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       check menu item
+labelAbbr          =       label
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       radio menu item
+textcontainerAbbr  =       text container
+togglebuttonAbbr   =       toggle button
+treetableAbbr      =       tree table
+headerAbbr         =       header
+footerAbbr         =       footer
+paragraphAbbr      =       paragraph
+entryAbbr          =       entry
+captionAbbr        =       caption
+headingAbbr        =       heading
+sectionAbbr        =       section
+formAbbr           =       form
+comboboxlistAbbr   =       combo box list
+comboboxoptionAbbr =       combo box option
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       option
+listboxAbbr        =       list box
+flatequationAbbr   =       flat equation
+gridcellAbbr       =       gridcell
+noteAbbr           =       note
+figureAbbr         =       fig
+definitionlistAbbr =       definition list
+termAbbr           =       term
+definitionAbbr     =       definition
+textareaAbbr       =       txtarea
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
