Fix errors in browser

--- a/zh-TW/browser/chrome/browser/devtools/webide.properties
+++ b/zh-TW/browser/chrome/browser/devtools/webide.properties
@@ -36,7 +36,7 @@ error_operationFail=操作失敗: %1$S
 error_cantConnectToApp=無法連線至應用程式: %1$S
 
 # Variable: error message (in english)
-error_cantFetchAddonsJSON=無法取回附加元件清單: $S
+error_cantFetchAddonsJSON=無法取回附加元件清單: %S
 
 addons_stable=穩定版
 addons_unstable=不穩定版
