New strings for Mobile

--- a/da/mobile/android/chrome/browser.properties
+++ b/da/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installer
 
 # Alerts
 alertAddonsDownloading=Henter tilføjelse
-alertAddonsInstalledNoRestart=Installation fuldført
 alertAddonsFail=Installationen mislykkedes
+alertAddonsInstalledNoRestart.message=Installation fuldført
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=TILFØJELSER
 
 alertDownloadsStart2=Starter hentning
 alertDownloadsDone2=Hentning udført
@@ -19,6 +23,9 @@ alertDownloadsToast=Filhentning startet…
 alertDownloadsPause=Pause
 alertDownloadsResume=Genoptag
 alertDownloadsCancel=Annuller
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Filhentninger er deaktiveret i gæstesessioner
 
 alertFullScreenToast=Tryk TILBAGE for at forlade fuldskærmstilstand
 
@@ -110,11 +117,40 @@ desktopNotification.dontAskAgain=Spørg ikke igen for dette websted
 
 # Contacts API
 contacts.allow=Tillad
-contacts.dontAllow=Tillad ikke
+contacts.dontAllow=Afvis
 contacts.ask=Tillad at %S får adgang til dine kontakter?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Spørg ikke igen for dette websted
+
+# Device Storage API
+deviceStorageMusic.allow=Tillad
+deviceStorageMusic.dontAllow=Afvis
+deviceStorageMusic.ask=Tillad at %S får adgang til din musik?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Spørg ikke igen for dette websted
+
+deviceStoragePictures.allow=Tillad
+deviceStoragePictures.dontAllow=Afvis
+deviceStoragePictures.ask=Tillad at %S får adgang til din billeder?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Spørg ikke igen for dette websted
+
+deviceStorageSdcard.allow=Tillad
+deviceStorageSdcard.dontAllow=Afvis
+deviceStorageSdcard.ask=Tillad at %S får adgang til dit eksterne lager?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Spørg ikke igen for dette websted
+
+deviceStorageVideos.allow=Tillad
+deviceStorageVideos.dontAllow=Afvis
+deviceStorageVideos.ask=Tillad at %S får adgang til dine videoer?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Spørg ikke igen for dette websted
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup): Semi-colon list of plural forms.
@@ -144,7 +180,7 @@ undoCloseToast.action2=FORTRYD
 offlineApps.ask=Tillad %S at gemme data på din enhed til offline-brug?
 offlineApps.dontAskAgain=Spørg ikke igen for dette websted
 offlineApps.allow=Tillad
-offlineApps.dontAllow2=Tillad ikke
+offlineApps.dontAllow2=Afvis
 
 # LOCALIZATION NOTE (offlineApps.storeOfflineData): Label that will be used in
 # site settings dialog.
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Tekst kopieret til udklipsholder
 
 # Casting
-casting.prompt=Send til enhed
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Send til enhed
+casting.mirrorTab=Afspejl faneblad
+casting.mirrorTabStop=Stop afspejling
 
 # Context menu
 contextmenu.openInNewTab=Åbn link i nyt faneblad
@@ -209,7 +249,9 @@ contextmenu.unmute=Slå lyd til
 contextmenu.saveVideo=Gem video
 contextmenu.saveAudio=Gem lyd
 contextmenu.addToContacts=Føj til kontakter
-contextmenu.castToScreen=Send til skærm
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Send til enhed
 
 contextmenu.copy=Kopier
 contextmenu.cut=Klip
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Mail
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Vælg feed
 feedHandler.subscribeWith=Abonner med
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S er forældet. Brug i stedet %S
