--- a/da/mobile/android/chrome/webapp.properties
+++ b/da/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 opdatering mislykkedes;##1 opdateringer mislykkedes
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Kunne ikke hente opdatering til %S;Kunne ikke hente opdateringer til %S
+
+webappsDisabledInGuest=Installering af apps er deaktiveret i gæstesessioner
