New strings for dom, security, and toolkit

--- a/da/dom/chrome/security/csp.properties
+++ b/da/dom/chrome/security/csp.properties
@@ -67,6 +67,9 @@ scriptFromStringBlocked =Et forsøg på at kalde JavaScript fra en streng (ved a
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Fortolker %1$S som et værtsnavn, ikke et nøgleord. Hvis du ville bruge det som et nøgleord, så brug '%2$S' (i enkelte anførselstegn).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Reglen '%1$S' understøttes ikke. Reglen og værdierne ignoreres.
 
 # CSP Errors:
 policyURINotAlone = "policy-uri"-reglen kan kun bruges alene
