--- a/da/dom/chrome/accessibility/AccessFu.properties
+++ b/da/dom/chrome/accessibility/AccessFu.properties
@@ -8,7 +8,7 @@ screenReaderStopped = Skærmlæser stoppet
 
 # Roles
 menubar        =       menulinje
-scrollbar      =       rullepanel
+scrollbar      =       rullebjælke
 grip           =       greb
 alert          =       besked
 menupopup      =       pop op-menu
@@ -94,11 +94,10 @@ listEnd        =       Sidste objekt
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 objekt;#1 objekter
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S af %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S af %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +107,14 @@ main           =       hoveddel
 navigation     =       navigation
 search         =       søg
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S med %S og %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolonne;#1 kolonner
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = med 1 kolonne;med #1 kolonner
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 række;#1 rækker
+tblRowInfo = og 1 række;og #1 rækker
 
 # table or grid cell information
 columnInfo = Kolonne %S
@@ -189,18 +185,85 @@ quicknav_Table       = Tabeller
 quicknav_Checkbox    = Afkrydsningsfelter
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+menubarAbbr        =       menulinje
+scrollbarAbbr      =       rullebjælke
+gripAbbr           =       greb
+alertAbbr          =       besked
+menupopupAbbr      =       pop op-menu
+documentAbbr       =       dokument
+paneAbbr           =       rude
+dialogAbbr         =       dialog
+separatorAbbr      =       separator
+toolbarAbbr        =       værktøjslinje
+statusbarAbbr      =       statuslinje
+tableAbbr          =       tabel
+columnheaderAbbr   =      kolonneoverskrift
+rowheaderAbbr      =       rækkeoverskrift
+columnAbbr         =       kolonne
+rowAbbr            =       række
+cellAbbr           =       celle
+linkAbbr           =       link
+listAbbr           =       liste
+listitemAbbr       =       listepunkt
+outlineAbbr        =       oversigt
+outlineitemAbbr    =       oversigtspunkt
+pagetabAbbr        =       faneblad
+propertypageAbbr   =       egenskabsside
+graphicAbbr        =       grafik
+pushbuttonAbbr     =       knap
+checkbuttonAbbr    =       afkrydsningsfelt
+radiobuttonAbbr    =       alternativknap
+comboboxAbbr       =       kombinationsboks
+progressbarAbbr    =       aktivitetslinje
+sliderAbbr         =       forskyder
+spinbuttonAbbr     =       rotationsknap
+diagramAbbr        =       diagram
+animationAbbr      =       animation
+equationAbbr       =       ligning
+buttonmenuAbbr     =       knapmenu
+whitespaceAbbr     =       mellemrum
+pagetablistAbbr    =       fanebladsliste
+canvasAbbr         =       lærred
+checkmenuitemAbbr  =       afkrydsningsmenupunkt
+labelAbbr          =       etiket
+passwordtextAbbr   =       adgangskodetekst
+radiomenuitemAbbr  =       valgmulighedsmenupunkt
+textcontainerAbbr  =       tekstboks
+togglebuttonAbbr   =       skifteknap
+treetableAbbr      =       trætabel
+headerAbbr         =       hoved
+footerAbbr         =       fod
+paragraphAbbr      =       afsnit
+entryAbbr          =       inddatering
+captionAbbr        =       figurtekst
+headingAbbr        =       overskrift
+sectionAbbr        =       sektion
+formAbbr           =       formular
+comboboxlistAbbr   =       liste til kombinationsboks
+comboboxoptionAbbr =       valgmulighed i kombinationsboks
+imagemapAbbr       =       billedkort
+listboxoptionAbbr  =       punkt i valgmulighedsliste
+listboxAbbr        =       valgmulighedsliste
+flatequationAbbr   =       flad ligning
+gridcellAbbr       =       celle i tern
+noteAbbr           =       note
+figureAbbr         =       figur
+definitionlistAbbr =       definitionsliste
+termAbbr           =       term
+definitionAbbr     =       definition
+textareaAbbr       =       tekstfelt
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1k;#1k
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1k;#1k
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = k%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
