--- a/da/toolkit/chrome/global/aboutSupport.properties
+++ b/da/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType parametre ikke fundet
 adapterDescription = Adapter-beskrivelse
 adapterVendorID = Producentidentifikation
 adapterDeviceID = Enhedsidentifikation
+adapterSubsysID = Subsys-identifikation
 adapterDrivers = Adapter-drivere
 adapterRAM = Adapter-RAM
 driverVersion = Driver-version
@@ -71,6 +72,7 @@ driverDate = Driver-dato
 adapterDescription2 = Adapter-beskrivelse (GPU #2)
 adapterVendorID2 = Producentidentifikation (GPU #2)
 adapterDeviceID2 = Enhedsidentifikation (GPU #2)
+adapterSubsysID2 = Subsys-identifikation (GPU #2)
 adapterDrivers2 = Adapter-drivere (GPU #2)
 adapterRAM2 = Adapter-RAM (GPU #2)
 driverVersion2 = Driver-version (GPU #2)
